# eval-UA-tion

./: README.md
code/: README.md
code/LMentry-static-UA/: README.md
code/LMentry-static-UA/artifacts/: DoAllWordsBelongToCatTask.json  LOWTask.json  WISTask.json  WhichWordWrongCatTask.json  WordLengthComparison.json  WordsAlphabetOrder.json  config.yaml
code/LMentry-static-UA/lmentry_static/: README.md  pyproject.toml
code/LMentry-static-UA/lmentry_static/src/lmentry_static/: __init__.py  __main__.py  consts.py  generate_dataset.py  writers.py
code/LMentry-static-UA/lmentry_static/src/lmentry_static/data/: words.py
code/LMentry-static-UA/lmentry_static/src/lmentry_static/tasks/: are_all_words_same_cat.py  data_structures.py  generic_task.py  letters_of_the_word.py  task_type_compare_two_things.py  task_type_n_in_m.py  task_type_word_categories.py  which_word_alph.py  which_word_is_longer.py  which_word_wrong_cat.py  words_in_sentence.py
code/LMentry-static-UA/lmentry_static/tests/test_lmentry_static/: test_data_structures.py  test_low.py  test_wis.py
code/LMentry-static-UA/resources/: config.yaml  config_fewshot.yaml  word_classes.yaml  word_classes_fewshot.yaml
code/LMentry-static-UA/resources/templates/: DoAllWordsBelongToCatTask.yaml  LOWTask.yaml  WISTask.yaml  WhichWordWrongCatTask.yaml  WordLengthComparison.yaml  WordsAlphabetOrder.yaml
code/LMentry-static-UA/resources/words/: Untitled.ipynb  sampled_words.csv  sampled_words_fewshot.csv  up-csv-json-conversion.ipynb  words_analysis.ipynb
code/UA-CBT/: README.md
code/UA-CBT/artifacts/: new_story_prompts_v6.csv  new_story_prompts_v6.keys.yaml  new_story_prompts_v6.yaml
code/UA-CBT/artifacts/stories/: few_shot_split.csv
code/UA-CBT/artifacts/tasks/: stories_train.csv  stories_train.data.yaml  stories_train.json  stories_train.jsonl  stories_train.labelstudio.json
code/UA-CBT/ua_cbt/: README.md  pyproject.toml
code/UA-CBT/ua_cbt/src/cbt_prompt_generation/: oop_recursive_generate.py  prompt_v4.yaml  prompt_v5_clean.yaml
code/UA-CBT/ua_cbt/src/ua_cbt/: __main__.py  consts.py  data_structures.py  epub.py  iteration.py  ml.py  utils.py  words_and_data.yaml  writing.py
code/UA-CBT/ua_cbt/tests/: test_ml.py  test_utils.py
code/UA-CBT/ua_cbt/tests/assets/: virm.epub  Українські народні казки book-11855819-6c9f9a.epub
code/UA-CBT/ua_cbt/tests/assets/csv/: generated_new_stories.csv
code/UP-Titles/: README.md
code/UP-Titles/artifacts/: up_titles_100-20-ukr.csv  up_titles_15000-20-ukr.csv
code/UP-Titles/up_dataset/: pyproject.toml
code/UP-Titles/up_dataset/src/up_dataset/: builder.py
code/lmeval_tasks/tasks/lmes/: cat_binary.yaml  cat_odd.yaml  low.yaml  utils.py  wis.yaml  wlc.yaml  wordalpha.yaml
code/lmeval_tasks/tasks/ua_cbt/: ua_cbt_exact.yaml  utils.py
code/lmeval_tasks/tasks/up/: up_ukr_exact.yaml  up_ukr_unmasked_exact.yaml  utils.py
other/MA/: README.md
other/MA/latex/: README.md  main.tex  references.bib
other/MA/presentation/: +  deploy.sh  index-speaker.html  index.html  index.qmd  pres.scss
other/UNLP/presentation/: index-speaker.html  index.html  index.qmd  pres.scss
(+13 files in other folders)
